Fix button spacing

--- a/components/button-group/_button-group.scss
+++ b/components/button-group/_button-group.scss
@@ -1,5 +1,9 @@
 %button-group {
   display: flex;
+
+  button {
+    margin: unset;
+  }
 }
 
 .button-group-horizontal {
