--- a/elements/button.scss
+++ b/elements/button.scss
@@ -1,10 +1,6 @@
 button {
-  display: flex;
-  flex: 1;
-
-  text-align: center;
-
-  // float: left; // IDK
+  @include margin(2 x, em);
+  @include padding(x 16, em);
 
   border-radius: em($border-radius);
   background-color: $color-first-1;
